deployment/web/nextjs-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextjs-service
  namespace: web
spec:
  type: ClusterIP
  selector:
    app: nextjs
  ports:
    - name: http
      port: 80
      targetPort: 3000
